--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,10 @@ a {
     text-decoration: none;
 }
 
-* {
+*{
     box-sizing: border-box;
+    -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+    display: none;
 }
